# qwen_tts_falsh_realtime_rs

./: Cargo.toml  chunk.txt  payload
src/: dashscope_rs.rs  logging.rs  main.rs  odps_rs.rs  qwen_tts_realtime.rs
src/common/: errors.rs  logging.rs  mod.rs
src/dashscope/: dashscope_rs.rs  mod.rs  parameters.rs  qwen_tts_realtime.rs
src/dashscope/models/: mod.rs  response_data.rs
src/odps/: account.rs  async_odps_arrow_writer.rs  constants.rs  mod.rs  models.rs  odps_arrow_reader.rs  odps_arrow_writer.rs  odps_rs.rs  rest_client.rs
