[package]
name = "qwen_tts_falsh_realtime_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.149", features = ["default"]}
base64 = { version = "0.22.1", features = ["default","alloc"] }

arrow = {version = "58.0.0", features = ["default",]}
arrow-schema = "58.0.0"
bytes = "1.11.1"
crc32c = "0.6"

tokio-tungstenite= { version = "0.28.0",features = ["native-tls"] }
tokio = { version = "1.49.0",features = ["full"] }
reqwest = { version = "0.13.1", features = ["default", "json", "stream"] }

thiserror = "2.0.18"

futures-util = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }

log = "0.4.29"
flexi_logger = "0.31.8"

raw-cpuid = "11.0"
rustc_version = "0.4.0"

chrono = "0.4.44"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"

bstr = "1.12.1"
regex = "1.12.2"
url = "2.5.8"
lazy_static = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
sys-info = "0.9.1"